# pq

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: core-contracts.md
src/: api.rs  atomic_output.rs  commands.rs  dataset.rs  engine.rs  error.rs  lib.rs  main.rs  model.rs  output.rs  utils.rs
src/cli/: args.rs
src/commands/: convert.rs  count.rs  head.rs  info.rs  merge.rs  query.rs  scan.rs  schema.rs  stats.rs
src/dataset/: source.rs
src/engine/: parquet.rs  scan.rs  stats.rs
src/output/: csv.rs  csv_support.rs  info.rs  json.rs  jsonl.rs  schema.rs  stats.rs  table.rs
src/plan/: scan.rs
stress/: benchmarks.sh  chaos.sh  generate.sh  memory_profile.sh  run_all.sh
tests/: cli.rs  core.rs  integration.rs  stress.rs
tests/fixtures/: test.parquet
tests/fixtures/volatile/: README.txt  edge-none.parquet  mixed-snappy.parquet  sparse-gzip.parquet  unicode-zstd.parquet
