[package]
name = "pq"
version = "0.1.0"
edition = "2021"
description = "A jq-like CLI for Parquet files. Fast startup, pretty output, sensible defaults."
license = "MIT"
repository = "https://github.com/sxndmxn/pq"
keywords = ["parquet", "cli", "data", "arrow"]
categories = ["command-line-utilities", "data-structures"]

[dependencies]
clap = { version = "4", features = ["derive"] }
parquet = "53"
arrow = { version = "53", features = ["prettyprint"] }
comfy-table = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
glob = "0.3"
rand = "0.8"

[[bin]]
name = "pq"
path = "src/main.rs"

[[bin]]
name = "pq-generate"
path = "src/bin/pq-generate.rs"

[lints.rust]
unsafe_code = "forbid"
unused_imports = "deny"
unused_must_use = "deny"
missing_debug_implementations = "warn"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "allow", priority = -1 }
nursery = { level = "allow", priority = -1 }
cargo = { level = "allow", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
checked_conversions = "deny"
